# trading_diary

./: .env.example  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
src/: manage.py  requirements-dev.txt  requirements.txt
src/_tests/: __init__.py  conftest.py  factory.py
src/_tests/fixtures/: clients.py  finances.py
src/_tests/tests/api/: test_trading_piar_list.py
src/accounting/: admin.py  apps.py  validators.py
src/accounting/api/serializers/: finances.py  positions.py
src/accounting/api/viewsets/: finances.py
src/accounting/managers/: finances.py  positions.py
src/accounting/migrations/: 0001_initial.py  0002_position.py
src/accounting/models/: __init__.py  finances.py  positions.py
src/app/: __init__.py  celery.py  logging_handlers.py  redis.py  settings.py  urls.py
src/apps/accounting/: admin.py  apps.py  urls.py
src/apps/accounting/api/: schemas.py
src/apps/accounting/managers/: finances.py  positions.py
src/apps/accounting/migrations/: 0002_remove_position_mark_price_and_more.py  (+2 more)
src/apps/bybit/: admin.py  apps.py  connections.py  tasks.py
src/apps/core/: apps.py  decorators.py  exceptions.py  filtersets.py  paginators.py  urls.py  views.py
src/apps/users/: admin.py
src/bybit/: admin.py  apps.py  connections.py  constants.py  tasks.py
src/bybit/migrations/: 0001_initial.py  0002_initial.py
src/bybit/models/: __init__.py  accesses.py
src/core/: apps.py  models.py
src/staticfiles/templates/: home.html
src/tradi/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/users/: admin.py  models.py
(+24 files in other folders)
